--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 .header {
+  margin-top: 25px;
   display: flex;
   justify-content: space-between;
   align-content: center;
@@ -166,6 +167,31 @@ body {
   justify-content: flex-end;
 
 }
+
+.arrow {
+  transform: rotate(45deg);
+  margin: auto;
+  width: 28px;
+  height: 2px;
+  display: block;
+  border-radius: 3px;
+  background-color: #E51937;
+}
+
+.arrow::before {
+  position: relative;
+  content: "";
+  transform: rotate(90deg);
+  margin: auto;
+  width: 28px;
+  height: 2px;
+  display: block;
+  border-radius: 3px;
+  top: -14px;
+  left: 13px;
+  background-color: #E51937;
+}
+
 .speed {
   margin-right: 5%;
   display: inline-block;
@@ -205,17 +231,18 @@ body {
 
 .future {
 background-image: url(img/tesla_inside.svg);
-padding-left: 80%;
+padding-left: 70%;
 margin: 0;
 }
 
 .future__block {
   background-color: #E51937;
+  padding-bottom: 120px;
 }
 
 .future__driving {
   margin-top: 0;
-  width: 90%;
+  width: 80%;
   font-family: "montserratregular", arial, helvetica, sans-serif ;
   font-weight: 600;
   font-size: 30px;
@@ -231,7 +258,7 @@ margin: 0;
   font-size: 15px;
   font-style: normal;
   line-height: 18px;
-  width: 90%;
+  width: 80%;
   margin: auto;
   margin-bottom: 55px;
 }
@@ -241,7 +268,7 @@ margin: 0;
   height: 65px;
   background-image: url(img/display.svg);
   background-repeat: no-repeat;
-  width: 90%;
+  width: 80%;
   margin: auto;
   margin-bottom: 35px;
 }
@@ -251,7 +278,7 @@ margin: 0;
   height: 71px;
   background-image: url(img/wifi.svg);
   background-repeat: no-repeat;
-  width: 90%;
+  width: 80%;
   margin: auto;
   margin-bottom: 25px;
 }
@@ -261,22 +288,45 @@ margin: 0;
   height: 71px;
   background-image: url(img/bag.svg);
   background-repeat: no-repeat;
-  width: 90%;
+  width: 80%;
   margin: auto;
-  margin-bottom: 270px;
+  margin-bottom: 165px;
 }
 
 .future__block_info {
   margin-bottom: 63px;
   color: #FFFFFF;
   margin: auto;
-  padding-left: 10px;
-  margin-right: 1px;
+  padding-left: 48px;
+  margin-right: 23px;
   font-family: "montserratregular", arial, helvetica, sans-serif ;
   font-weight: 700;
   font-size: 13px;
   font-style: normal;
   line-height: 35px;
+}
+
+.future__block_info::before {
+  position: relative;
+  display: inline-block;
+  content: "";
+  width: 22px;
+  height: 22px;
+  border: 2px solid #FFFFFF;
+  border-radius: 50%;
+  left: -16px;
+  top: 6px;
+}
+
+.future__block_info::after {
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  content: "i";
+  border-radius: 50%;
+  left: -180px;
+  top: 2px;
+  font-size: 21px;
 }
 
 .future__block_order {
@@ -294,4 +344,159 @@ margin: 0;
   line-height: 35px;
 }
 
-.
+.safety {
+  background-image: url(img/ModelS.svg);
+  background-repeat: no-repeat;
+  padding-right: 70%;
+  margin: 0;
+  background-position: top right;
+}
+
+.safety__block {
+  background-color: #E51937;
+  padding-bottom: 68px;
+}
+
+.safety__car {
+  margin-top: 0;
+  font-family: "montserratregular", arial, helvetica, sans-serif ;
+  font-weight: 600;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 36px;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 12px;
+  padding-top: 50px;
+}
+
+.safety__text {
+  font-family: "montserratregular", arial, helvetica, sans-serif ;
+  font-weight: 500;
+  font-size: 15px;
+  font-style: normal;
+  line-height: 18px;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+.header__safety_stars {
+  font-family: "montserratregular", arial, helvetica, sans-serif ;
+  font-weight: 600;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 36px;
+  width: 57%;
+  margin: auto;
+  margin-bottom: 25px;
+}
+ .first, .second, .third, .fourth, .fiveth {
+  position: relative;
+  display: block;
+  margin: auto;
+  width: 80%;
+  margin-bottom: 16px;
+
+}
+
+.first__one {
+  margin-left: 20%;
+}
+
+.second__one {
+  margin-left: 27%;
+}
+
+.third__one {
+  margin-left: 4%;
+}
+
+.fourth__one {
+  margin-left: 16%;
+}
+
+.fiveth__one {
+  margin-left: 14%;
+}
+
+.fiveth {
+  margin-bottom: 100px;
+}
+
+.stars {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background-image: url(img/Star.svg);
+  text-align: center;
+  background-repeat: no-repeat;
+}
+
+.five__stars {
+  display: block;
+  margin: auto;
+  width: 280px;
+  height: 92px;
+  background-image: url(img/five_stars.svg);
+  margin-bottom: 50px;
+}
+
+.car__safety {
+  position: absolute;
+  width: 1049px;
+  height: 540px;
+  top: 1960px;
+  left: 330px;
+}
+
+.safety__block_info {
+  margin-bottom: 63px;
+  color: #FFFFFF;
+  margin: auto;
+  padding-left: 48px;
+  margin-right: 23px;
+  font-family: "montserratregular", arial, helvetica, sans-serif ;
+  font-weight: 700;
+  font-size: 13px;
+  font-style: normal;
+  line-height: 35px;
+}
+
+.safety__block_info::before {
+  position: relative;
+  display: inline-block;
+  content: "";
+  width: 22px;
+  height: 22px;
+  border: 2px solid #FFFFFF;
+  border-radius: 50%;
+  left: -16px;
+  top: 6px;
+}
+
+.safety__block_info::after {
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  content: "i";
+  border-radius: 50%;
+  left: -180px;
+  top: 2px;
+  font-size: 21px;
+}
+
+.safety__block_order {
+  display: inline-block;
+  width: 160px;
+  height:  40px;
+  border: 2px solid #FFFFFF;
+  text-align: center;
+  color: #FFFFFF;
+  margin: auto;
+  font-family: "montserratregular", arial, helvetica, sans-serif ;
+  font-weight: 700;
+  font-size: 13px;
+  font-style: normal;
+  line-height: 35px;
+}
